Fix routing and z-index bug and clear orphaned images from wwwroot

--- a/growers_market.client/src/Components/ListingImages/ListingImages.css
+++ b/growers_market.client/src/Components/ListingImages/ListingImages.css
@@ -40,7 +40,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 100;
+            z-index: 2;
             background: linear-gradient(90deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
         }
 
@@ -49,7 +49,7 @@
             position: absolute;
             top: 0;
             right: 0;
-            z-index: 100;
+            z-index: 2;
             background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
         }
 
